--- a/Kolokwium_nr1/Kolokwium_nr1.csproj
+++ b/Kolokwium_nr1/Kolokwium_nr1.csproj
@@ -6,10 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.1" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Controllers\" />
+    <PackageReference Include="System.Data.SqlClient" Version="4.3.0" />
   </ItemGroup>
 
 
