--- a/Kolokwium_nr1/Kolokwium_nr1.csproj
+++ b/Kolokwium_nr1/Kolokwium_nr1.csproj
@@ -9,5 +9,9 @@
     <PackageReference Include="System.Data.SqlClient" Version="4.3.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="DTOs\Responses\" />
+  </ItemGroup>
+
 
 </Project>
